--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   config:
    server:
     git:
-     uri: https://github.com/lruiz0/spring-cloud-configuration-server.git
+     uri: https://github.com/lruiz0/spring-cloud-configuration-server
 
  # Spring properties 
  profiles: 
